feat(frontend): introduces frontend

--- a/app/templates/planner/index.html.twig
+++ b/app/templates/planner/index.html.twig
@@ -1,11 +1,16 @@
-<p>
-    Quas quas deleniti aut. Inventore ut error ut vero blanditiis dolores possimus rerum. Natus voluptates ut quidem perferendis dicta asperiores autem. Unde error illum et voluptatem quas dolorum assumenda dicta.
-</p><p>
-    Voluptatem at velit sapiente voluptatem voluptatem sint sed. Delectus et ut non voluptatem et ut. Qui vitae maiores non consequatur autem voluptatem rerum.
-</p><p>
-    Quis eaque beatae ipsa. Possimus voluptates beatae molestias. Architecto omnis officia rerum maiores omnis mollitia ex. Libero ab libero odit provident et. Autem iusto consequatur nisi rerum minima earum ipsam recusandae. Officiis ut praesentium rem voluptatem a optio nihil repellendus.
-</p><p>
-    Assumenda qui consequatur qui voluptates quo. Iste odio voluptatem dolores ipsa et neque. Sint beatae eos eos adipisci nobis sunt velit.
-</p><p>
-    Illum qui et repellat autem. Quasi impedit sequi nihil et ad eveniet. Et itaque aliquid consequatur expedita et est. Consequuntur itaque nesciunt qui vel voluptates. Eos deserunt aperiam mollitia enim.
-</p>
+{% extends 'base.html.twig' %}
+{% trans_default_domain 'app' %}
+
+{% block content %}
+    <p>
+        Quas quas deleniti aut. Inventore ut error ut vero blanditiis dolores possimus rerum. Natus voluptates ut quidem perferendis dicta asperiores autem. Unde error illum et voluptatem quas dolorum assumenda dicta.
+    </p><p>
+        Voluptatem at velit sapiente voluptatem voluptatem sint sed. Delectus et ut non voluptatem et ut. Qui vitae maiores non consequatur autem voluptatem rerum.
+    </p><p>
+        Quis eaque beatae ipsa. Possimus voluptates beatae molestias. Architecto omnis officia rerum maiores omnis mollitia ex. Libero ab libero odit provident et. Autem iusto consequatur nisi rerum minima earum ipsam recusandae. Officiis ut praesentium rem voluptatem a optio nihil repellendus.
+    </p><p>
+        Assumenda qui consequatur qui voluptates quo. Iste odio voluptatem dolores ipsa et neque. Sint beatae eos eos adipisci nobis sunt velit.
+    </p><p>
+        Illum qui et repellat autem. Quasi impedit sequi nihil et ad eveniet. Et itaque aliquid consequatur expedita et est. Consequuntur itaque nesciunt qui vel voluptates. Eos deserunt aperiam mollitia enim.
+    </p>
+{% endblock %}
