--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -1,16 +1,23 @@
+{% trans_default_domain 'app' %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
-
-        {% block javascripts %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}My Application{% endblock %}</title>
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('app') }}
+    {% endblock %}
+</head>
+<body>
+{% block body %}
+    <div class="container py-3">
+        {{ include('layout/_header.html.twig') }}
+        <main id="content">
+            {% block content %}{% endblock %}
+        </main>
+        {{ include('layout/_footer.html.twig') }}
+    </div>
+{% endblock %}
+</body>
 </html>
