fix(front): add missing trans_default_domain

--- a/app/templates/layout/_header.html.twig
+++ b/app/templates/layout/_header.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'app' %}
 <header>
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
         <h1 class="fs-4">
